corrigindo erros sonar